# gaia-eater

./: Cargo.toml  README.md
assets/biomes/: list.biomes.ron
assets/structures/: list.structures.ron
assets/text/: en.text.ron  ja.text.ron
src/: action.rs  assets.rs  defs.rs  draw.rs  info.rs  main.rs  planet.rs  screen.rs  sim.rs  text.rs  ui.rs
